--- a/package.json
+++ b/package.json
@@ -29,5 +29,11 @@
     "gulp-sass": "^4.1.0",
     "gulp-uglify": "^3.0.2",
     "gulp.spritesmith": "^6.11.0"
-  }
+  },
+"browserslist": [
+    "last 2 version",
+    "> 1%",
+    "IE 11",
+    "not IE < 11"
+  ]
 }
